--- a/camshome.html
+++ b/camshome.html
@@ -315,13 +315,13 @@ $(function() {
                 <div class="silex-element-content normal"><p><a href="#!page-home" class="">Home</a></p>
                 </div>
             </div><div data-silex-type="image-element" class="editable-style silex-id-1490693355800-0 image-element" data-silex-id="silex-id-1490693355800-0" data-silex-href="#!page-home" style=""><img src="Logo%20Sept%2017.jpg"></div><div data-silex-type="text-element" class="editable-style text-element silex-id-1439554966975-57 nav-mark nav hide-on-mobile" data-silex-id="silex-id-1439554966975-57" style="">
-                <div class="silex-element-content normal"><p><a href="https://outlook.office.com/mail/" linktype="LinkTypeExternal" title="Email">email</a><a href="#!page-email" class=""><br></a></p>
+                <div class="silex-element-content normal"><p><a href="#!page-email" title="Email" linktype="LinkTypePage">email</a><a href="#!page-email"><br></a></p>
                 </div>
             </div><div data-silex-type="text-element" class="editable-style text-element silex-id-1439554967286-60 nav-mark nav hide-on-mobile" data-silex-id="silex-id-1439554967286-60" style="">
                 <div class="silex-element-content normal">
-                    <p><a href="https://canvas.camshill.com" linktype="LinkTypeExternal" title="Online Classroom (CHOC)">online classroom (CHOC)</a><br></p></div>
+                    <p><a href="#!page-choc" title="Online Classroom (CHOC)" linktype="LinkTypePage">online classroom (CHOC)</a><br></p></div>
             </div><div data-silex-type="text-element" class="editable-style text-element silex-id-1439554966767-55 nav-mark nav hide-on-mobile" data-silex-id="silex-id-1439554966767-55" style="">
-                <div class="silex-element-content normal"><p><a href="https://www.edulinkone.com" linktype="LinkTypeExternal" title="Edulink">edulink</a></p>
+                <div class="silex-element-content normal"><p><a href="#!page-edulink-one" title="Edulink" linktype="LinkTypePage">edulink</a></p>
                 </div>
             </div></div>
     </div><div data-silex-type="container-element" class="container-element website-min-width editable-style silex-id-1490693798023-5 section-element hide-on-mobile prevent-resizable page-home paged-element" data-silex-id="silex-id-1490693798023-5" style="">
