--- a/cams2.html
+++ b/cams2.html
@@ -371,7 +371,7 @@ $(function() {
                         <div class="silex-element-content normal">
                             <h2>Getting</h2><h3>started<br></h3></div>
                     </div>
-                </div><div data-silex-type="text-element" class="editable-style text-element silex-id-1600608032507-0 buttons" data-silex-id="silex-id-1600608032507-0" title="" style=""><div class="silex-element-content normal">
+                </div><div data-silex-type="text-element" class="editable-style text-element silex-id-1600608032507-0 buttons" data-silex-id="silex-id-1600608032507-0" title="" style="" data-silex-href="#!page-more-resources"><div class="silex-element-content normal">
                             <h2>more<br></h2>
                             <h3>resources<br></h3>
                         </div></div><div data-silex-type="html-element" class="editable-style silex-id-1538215480678-25 html-element silex-component slider" data-silex-id="silex-id-1538215480678-25" style=""><div class="silex-element-content"><div id="parent_1600634045199_855">
